--- a/Baigiamasis Darbas/Baigiamasis/exploremore.html
+++ b/Baigiamasis Darbas/Baigiamasis/exploremore.html
@@ -9,7 +9,19 @@
     <link rel="icon" href="GAN ICON I HATE WIX.png" type="image/x-icon">
   </head>
   <body>
-    <main>
+    <header class="site-header">
+        <a class="Header logo" href="index.html"><img src="https://www.gancube.com/cdn/shop/files/header_LOGO_white.svg?v=1723095844&width=225"></a>
+        <nav class="nav">
+          <ul class="nav-links">
+            <li><a href="index.html#1">About us</a></li>
+            <li><a href="index.html#2">Our acomplishments</a></li>
+            <li><a href="index.html#3">Shop</a></li>
+            <li><a href="index.html#4">Reviews</a></li>
+          </ul>
+        </nav>
+        <a href="cart.html"><img src="CArt.png"  class="carticon"></a>
+      </header>
+      <main>
       <p>You have broken our <a href="termsofnotperchase.html">Terms of Service</a> agreement. Further agreement strikes may result in penalties</p>
       <h4>Back to <a href="index.html">main page</a></h4>
     </main>
